mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!--blabla  -->
+<!--blabla  
+rebasing update faire des changement-->
 <head>
 	<title>moi</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
