fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--blabla  
-rebasing update faire des changement
+big trouble-->
 je suis revenue sur master-->
 <head>
 	<title>Silly</title>
@@ -15,10 +15,9 @@ je suis revenue sur master-->
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here coucou je vais faire un probleme -->
+	<!-- Content Goes Here -->
 		<p>
 			Just some content
-			je vous aurais prevenue que j'allais faire un probleme
 		</p>
 	</main>
 	<footer class="container">
