mb conlficting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--blabla  
-rebasing update faire des changement-->
+rebasing update faire des changement
+je suis revenue sur master-->
 <head>
-	<title>moi</title>
+	<title>Silly</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,9 +15,10 @@ rebasing update faire des changement-->
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content Goes Here coucou je vais faire un probleme -->
 		<p>
 			Just some content
+			je vous aurais prevenue que j'allais faire un probleme
 		</p>
 	</main>
 	<footer class="container">
