--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@ je suis revenue sur master-->
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Fatou 2014</p>
+		<p>&copy; Fatou 2014. git training </p>
 	</footer>
 </body>
 </html>
