adding important content

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 big trouble-->
 je suis revenue sur master-->
 <head>
-	<title>Lots of trouble, in a little repo</title>
+	<title>Updating title for Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ je suis revenue sur master-->
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
