--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 big trouble-->
 je suis revenue sur master-->
 <head>
-	<title>Updating title for Stash example</title>
+	<title>Updating title for Stash branchexample</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
